# cppChess

./: .gitignore  Bitboard.cpp  Bitboard.h  CMakeLists.txt  Chess.cpp  Chess.h  ChessStack.h  Compass.cpp  Compass.h  Move.cpp  Move.h  MoveGenerator.cpp  MoveGenerator.h  PieceLocationTables.cpp  PieceLocationTables.h  Player.cpp  Player.h  SearchLogger.cpp  SearchLogger.h  TTable.cpp  TTable.h  Timer.h  ccc_time.cpp  ccc_time.h  main.cpp  perft_8_log.txt
